--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
-    "@nuxt/image": "^0.7.1"
+    "@nuxt/image-edge": "^1.0.0-27827328.bc9ddc0",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-nuxt": "^4.0.0"
   }
 }
