--- a/package.json
+++ b/package.json
@@ -9,20 +9,15 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
+        "@nuxt/image": "^0.7.1",
         "@nuxtjs/axios": "^5.13.6",
-        "@nuxtjs/dotenv": "^1.4.1",
         "@nuxtjs/sitemap": "^2.4.0",
-        "axios": "^1.2.1",
         "bootstrap": "^4.6.2",
         "bootstrap-vue": "^2.22.0",
         "core-js": "^3.25.3",
         "nuxt": "^2.15.8",
-        "ufo": "^1.0.1",
         "vue": "^2.7.10",
         "vue-server-renderer": "^2.7.10",
         "vue-template-compiler": "^2.7.10"
-    },
-    "devDependencies": {
-        "@nuxt/image": "^0.7.1"
     }
 }
