--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "nuxt": "^2.15.8",
         "vue": "^2.7.10",
         "vue-server-renderer": "^2.7.10",
-        "vue-template-compiler": "^2.7.10"
+        "vue-template-compiler": "^2.7.10",
+        "@nuxtjs/google-analytics": "^2.4.0"
+    },
+    "devDependencies": {
     }
 }
