--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
+        "@nuxt/image": "^0.7.1",
         "@nuxtjs/axios": "^5.13.6",
         "@nuxtjs/sitemap": "^2.4.0",
         "core-js": "^3.25.3",
         "nuxt": "^2.15.8",
         "vue": "^2.7.10",
         "vue-server-renderer": "^2.7.10",
-        "vue-template-compiler": "^2.7.10",
-        "@nuxt/image": "^0.7.1"
+        "vue-template-compiler": "^2.7.10"
+    },
+    "devDependencies": {
+        "@nuxtjs/google-analytics": "^2.4.0"
     }
 }
