--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
+        "@fortawesome/free-brands-svg-icons": "^6.2.1",
+        "@fortawesome/free-regular-svg-icons": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/vue-fontawesome": "^2.0.9",
         "@nuxt/image": "^0.7.1",
         "@nuxtjs/axios": "^5.13.6",
+        "@nuxtjs/google-analytics": "^2.4.0",
         "@nuxtjs/sitemap": "^2.4.0",
         "core-js": "^3.25.3",
         "nuxt": "^2.15.8",
         "vue": "^2.7.10",
         "vue-server-renderer": "^2.7.10",
-        "vue-template-compiler": "^2.7.10",
-        "@nuxtjs/google-analytics": "^2.4.0"
+        "vue-template-compiler": "^2.7.10"
     }
 }
