--- a/.github/ISSUE_TEMPLATE/test-addtool.yml
+++ b/.github/ISSUE_TEMPLATE/test-addtool.yml
@@ -52,6 +52,7 @@ body:
     id: images
     attributes:
       label: "Image(s)"
+      description: one link per line
       placeholder: |
         https://...
         https://...
