--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@nuxtjs/dayjs": "^1.4.1",
         "@nuxtjs/sitemap": "^2.4.0",
         "core-js": "^3.25.3",
+        "masonry-layout": "^4.2.2",
         "nuxt": "^2.15.8",
         "vue": "^2.7.10",
         "vue-gtag": "^1.16.1",
