--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@nuxt/image": "^0.7.1",
         "@nuxtjs/axios": "^5.13.6",
         "@nuxtjs/dayjs": "^1.4.1",
+        "@nuxtjs/redirect-module": "^0.3.1",
         "@nuxtjs/sitemap": "^2.4.0",
         "core-js": "^3.25.3",
         "masonry-layout": "^4.2.2",
