--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
         "@nuxt/image": "^0.7.1",
         "@nuxtjs/axios": "^5.13.6",
         "@nuxtjs/dayjs": "^1.4.1",
+        "@nuxtjs/feed": "^2.0.0",
         "@nuxtjs/redirect-module": "^0.3.1",
         "@nuxtjs/sitemap": "^2.4.0",
         "core-js": "^3.25.3",
+        "feed": "^4.2.2",
         "masonry-layout": "^4.2.2",
         "nuxt": "^2.15.8",
         "vue": "^2.7.10",
