--- a/static/.htaccess
+++ b/static/.htaccess
@@ -4,3 +4,6 @@ ErrorDocument 401 /404.html
 ErrorDocument 403 /404.html
 ErrorDocument 404 /404.html
 ErrorDocument 500 /404.html
+
+RewriteEngine On
+RedirectPermanent /tag/last7days https://offsec.tools/last7days
